[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/game-menu/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://scenes/cheems/CheemsKine.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Candy Beans.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/level-party/floor_party.png" type="Texture" id=4]
[ext_resource path="res://scenes/street/Street.gd" type="Script" id=7]
[ext_resource path="res://assets/level-party/text_container_1.png" type="Texture" id=9]
[ext_resource path="res://scenes/enemy/Enemy.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 155, 636.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 468.877, 375.706 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_color = Color( 0.152941, 0.152941, 0.152941, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.811765, 0.0313726, 0.0313726, 0.721569 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.764706, 0.576471, 0.34902, 0.807843 )

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0.152941, 0.152941, 0.152941, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Street" type="Node2D" groups=["Street"]]
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ -1250.0, -2002.0, -3502.0, -5008.0, -5346.0, -6219.0 ],
"_edit_vertical_guides_": [ 502.0, 751.0, 999.0, 1249.0 ]
}

[node name="StreetBG" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="FloorParty2" type="Sprite" parent="StaticBody2D2"]
position = Vector2( -163, 396 )
rotation = -1.56493
scale = Vector2( 1, 1.74655 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 145, 626.5 )
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="FloorParty" type="Sprite" parent="StaticBody2D"]
position = Vector2( 1993, 456 )
rotation = -1.51378
scale = Vector2( 1, 1.74655 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2041.29, 611 )
scale = Vector2( 1.00089, 1.74604 )
shape = SubResource( 3 )

[node name="Cheems" parent="." instance=ExtResource( 2 )]
position = Vector2( 962, 612 )
scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="."]
margin_left = 131.0
margin_top = 25.0
margin_right = 489.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0.137255, 0.133333, 0.133333, 1 )
custom_fonts/font = SubResource( 4 )
text = "BARRITA DE AMSIEDAD"

[node name="AnxietyBar" type="ProgressBar" parent="." groups=["enemy"]]
margin_left = 131.0
margin_top = 73.0
margin_right = 1786.0
margin_bottom = 138.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
max_value = 50.0
rounded = true
percent_visible = false

[node name="AnxietyDialog" type="Sprite" parent="."]
position = Vector2( 913.125, 862 )
texture = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="AnxietyDialog"]
margin_left = -561.0
margin_top = -88.0
margin_right = 569.0
margin_bottom = 48.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[shake rate=5 level=10]¡Aaaaah! Hay mucha gemte aquí… Oh, esa es… la profesora de matemáticas, espero que no me vea… ¡¡Qué amsiedadt!! [/shake]"
text = "¡Aaaaah! Hay mucha gemte aquí… Oh, esa es… la profesora de matemáticas, espero que no me vea… ¡¡Qué amsiedadt!! "

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Enemy" parent="." groups=["enemy"] instance=ExtResource( 10 )]
position = Vector2( 1249, -1250 )

[node name="Enemy3" parent="." groups=["enemy"] instance=ExtResource( 10 )]
position = Vector2( 504, -2001 )

[node name="Enemy2" parent="." groups=["enemy"] instance=ExtResource( 10 )]
position = Vector2( 998, -2000 )

[node name="Enemy4" parent="." groups=["enemy"] instance=ExtResource( 10 )]
position = Vector2( 764, -3165 )

[node name="Enemy5" parent="." groups=["enemy"] instance=ExtResource( 10 )]
position = Vector2( 1260, -5002 )

[node name="Enemy6" parent="." groups=["enemy"] instance=ExtResource( 10 )]
position = Vector2( 773, -4146 )

[node name="Enemy7" parent="." groups=["enemy"] instance=ExtResource( 10 )]
position = Vector2( 997, -5876 )

[node name="Enemy8" parent="." groups=["enemy"] instance=ExtResource( 10 )]
position = Vector2( 501, -6209 )

[node name="Enemy9" parent="." groups=["enemy"] instance=ExtResource( 10 )]
position = Vector2( 748, -7520 )

[node name="Enemy10" parent="." groups=["enemy"] instance=ExtResource( 10 )]
position = Vector2( 1256, -7731 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
